--- a/src/www/stylesheets/site.pack.scss
+++ b/src/www/stylesheets/site.pack.scss
@@ -20,50 +20,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: #FFC9E2;
-  transition: 0.1s linear;
-
-  &:hover {
-    color: darken(#FFC9E2, 10%);
-  }
+.fill-background {
+   background-attachment: fixed;
+   background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-p {
-  margin: 2rem 0;
-  line-height: 1.4em;
-
-  &:last-of-type {
-    margin-bottom: 0;
-  }
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 70rem;
-}
-
-.button {
-  display: inline-block;
-  padding: 1.2rem 3.3rem;
-  font-weight: 800;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #04092E;
-  background: #FFC9E2;
-  border-radius: 4px;
-  cursor: pointer;
-
-  &.login {
-    margin-top: 2rem;
-  }
-
-  &:hover {
+  .inverse{
+    background: black;
     color: white;
-    background-color: darken(#FFC9E2, 10%);
   }
-}
+  .inverse > * {
+    color: white;
+  }
 
 .header {
   padding: 6rem 2rem;
@@ -91,41 +63,17 @@ p {
     flex-direction: column;
     flex: 1;
     justify-content: center;
-    font-family: 'Monoton', cursive;
+    font-family: 'Bungee Inline', cursive;
     font-size: 6rem;
     font-weight: normal;
     width: 1350px;
-    color: #FFC9E2;
+    color: white;
     margin-left: auto;
     margin-right: auto;
 
     @media screen and (min-width: 960px) {
       font-size: 10rem;
     }
-  }
-
-  h2 {
-    font-size: 1.8rem;
-    font-weight: 800;
-    letter-spacing: 0.4rem;
-
-    @media screen and (min-width: 960px) {
-      font-size: 3rem;
-    }
-  }
-
-  div {
-    font-size: 1.6rem;
-    line-height: 1.4em;
-
-    @media screen and (min-width: 960px) {
-      font-size: 1.8rem;
-    }
-  }
-
-  small {
-    display: block;
-    margin-top: 4rem;
   }
 }
 
