--- a/src/www/stylesheets/site.pack.scss
+++ b/src/www/stylesheets/site.pack.scss
@@ -21,12 +21,12 @@ body {
 }
 
 .fill-background {
-   background-attachment: fixed;
-   background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
 }
 
   .inverse{
@@ -67,7 +67,7 @@ body {
     font-size: 6rem;
     font-weight: normal;
     width: 1350px;
-    color: white;
+    color: #555;
     margin-left: auto;
     margin-right: auto;
 
