Added contact page, andded nav and standardized page structures.

--- a/src/www/stylesheets/site.pack.scss
+++ b/src/www/stylesheets/site.pack.scss
@@ -20,6 +20,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+  body.pad { 
+    padding-top: 60px;
+  }
+
 .fill-background {
   background-size: cover;
   background-repeat: no-repeat;
