Added new page for library.

--- a/src/www/stylesheets/site.pack.scss
+++ b/src/www/stylesheets/site.pack.scss
@@ -41,6 +41,12 @@ body {
     color: white;
   }
 
+div.dark {
+  color: #EEE;
+  background: #222;
+}
+
+
 .header {
   padding: 6rem 2rem;
   flex-direction: column;
